--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
     <%= yield %>
   </div>
   <hr>
-  <%= link_to "Sign Up", new_user_path, class:"btn btn-info" %>
+  <% if current_user %>
+    Logged in as <%= current_user.username %>.
+    <%= link_to "Log Out", logout_path("current"), method: "get", class:"btn btn-danger" %>
+  <% else %>
+    <%= link_to "Sign Up", signup_path, class:"btn btn-info" %>
+    <%= link_to "Log in", login_path, class:"btn btn-success" %>
+  <% end %>
 </body>
 </html>
