--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,7 +2,5 @@
 
 <% @user.photos.each do |photo| %>
   <p><%= photo.description %></p>
-  <p><%= image_tag photo.picture.url %></p>
-  <p><%= image_tag photo.picture.url(:medium) %></p>
-  <p><%= image_tag photo.picture.url(:thumb) %></p>
+  <p><%= link_to (image_tag photo.picture.url(:thumb)), user_photo_path(@user, photo) %>  </p>
 <% end %>
