--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <% if current_user %>
     Logged in as <%= current_user.username %>.
     <%= link_to "Log Out", logout_path("current"), method: "get", class:"btn btn-danger" %>
+    <%= link_to "#{current_user.username}'s Photos", user_photos_path(current_user), method: "get", class:"btn btn-info" %>
   <% else %>
     <%= link_to "Sign Up", signup_path, class:"btn btn-info" %>
     <%= link_to "Log in", login_path, class:"btn btn-success" %>
