--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
 <div class="page-header">
   <h1><%= @user.username %> <small><%= @user.email %></small></h1>
 </div>
+
+
+<% @tagged.each do |tag| %>
+  <%= link_to (image_tag tag.photo.picture.url(:thumb)), user_photo_path(@user, tag.photo) %>
+<% end %>
+
