--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <hr>
     <% if current_user %>
-      <%= link_to "Home", root_path, method: "get", class:"btn btn-default" %>
+      <%= link_to "Home", users_path, method: "get", class:"btn btn-default" %>
       <%= link_to "#{current_user.username}'s Profile", user_path(current_user), method: "get", class:"btn btn-warning" %>
       <%= link_to "#{current_user.username}'s Photos", user_photos_path(current_user), method: "get", class:"btn btn-info" %>
       <%= link_to "Log Out", logout_path("current"), method: "get", class:"btn btn-danger" %>
