--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1> Sign Up!!! </h1>
 
-<%= form_for @user do |f| %>
+<%= form_for @user, :url => users_path, :html => { multipart: true } do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
       <h2>Form is invalid</h2>
@@ -17,6 +17,9 @@
   <div class="form-group">
     <%= f.label :email %>
     <%= f.text_field :email %>
+  </div>
+  <div class="form-group">
+    <%= f.file_field :avatar %>
   </div>
   <div class="form-group">
     <%= f.label :password %>
