--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,30 @@
-<div class="col-md-8">
-</div>
-<div class="col-md-4">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Users</h3>
+<%= link_to "Add Photos", new_user_photo_path(current_user), class:"btn btn-success" %>
+<hr>
+<div class="row">
+  <div class="col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Recommended Photos</h3>
+      </div>
+      <div class="panel-body">
+        <% @users.each do |user| %>
+          <% user.photos.each do |photo| %>
+            <p><%= link_to "<button class='btn btn-default'>#{image_tag photo.picture.url(:medium)}<p>#{user.username}</p></button>".html_safe, user_path(user) %>
+          <% end %>
+        <% end %>
+      </div>
     </div>
-    <div class="panel-body">
-      <% @users.each do |user| %>
-        <p><%= link_to "<button class='btn btn-default'>#{image_tag user.avatar.url(:thumb)}<p>#{user.username}</p></button>".html_safe, user_path(user) %>
-      <% end %>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Users</h3>
+      </div>
+      <div class="panel-body">
+        <% @users.each do |user| %>
+          <p><%= link_to "<button class='btn btn-default'>#{image_tag user.avatar.url(:thumb)}<p>#{user.username}</p></button>".html_safe, user_path(user) %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
