--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= link_to "Home", users_path, method: "get", class:"btn btn-default" %>
         <%= link_to "#{current_user.username}'s Profile", user_path(current_user), method: "get", class:"btn btn-warning" %>
         <%= link_to "#{current_user.username}'s Photos", user_photos_path(current_user), method: "get", class:"btn btn-info" %>
+        <%= link_to "Add Photos", new_user_photo_path(current_user), class:"btn btn-success" %>
         <%= link_to "Log Out", logout_path("current"), method: "get", class:"btn btn-danger" %>
       <% else %>
         <%= link_to "Sign Up", signup_path, class:"btn btn-info" %>
